# cdm-unofficial-api

./: data.json  pyproject.toml  requirements-dev.txt  requirements.txt
api/: serializers.py  urls.py  views.py
bot/: admin.py  models.py
bot/migrations/: 0001_initial.py  0002_auto_20200923_2035.py  0003_auto_20200923_2107.py  0004_auto_20200924_2251.py
mangas/: admin.py  apps.py  models.py
mangas/migrations/: 0001_initial.py  0002_auto_20200917_1427.py  0003_auto_20200921_0924.py  0004_auto_20200922_0903.py  0005_auto_20200922_0908.py  0006_auto_20200922_0954.py  0007_auto_20200923_1243.py
setup/: settings.py  urls.py
